# fsm

./: .gitignore  Cargo.toml  README.md  fsm_config_example.json
backend/: Cargo.toml
backend/src/: config.rs  error.rs  filter.rs  lib.rs  main.rs  reader.rs  writer.rs
backend/src/dashboard/: messages.rs  mod.rs
backend/src/datasource/: mod.rs  sweep.rs  watcher.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  style.css
frontend/src/content/: Logs.tsx
src/: config.rs  error.rs  filepath.rs  filter.rs  lib.rs  main.rs  reader.rs
src/data/: mod.rs
src/data/data_receiver/: logger.rs  mod.rs  writer.rs
src/data/data_source/: mod.rs  sweep.rs  watch.rs
src/datasource/: mod.rs  sweep.rs  watcher.rs
